Can sign in, Can sign up, Using User Preferences and fix some bug

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Controller.Activity.SignUpActivity"></activity>
+        <activity
+            android:name=".Controller.Activity.LoginActivity"
+            android:screenOrientation="portrait"
+            android:label="@string/title_activity_login">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".Controller.Activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
