Show Food in Home page, Food detail layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Controller.Activity.SignUpActivity"></activity>
+        <activity android:name=".Controller.Activity.ProfileSomeone"></activity>
+        <activity android:name=".Controller.Activity.FoodDetailActivity" />
+        <activity android:name=".Controller.Activity.SignUpActivity" />
         <activity
             android:name=".Controller.Activity.LoginActivity"
-            android:screenOrientation="portrait"
-            android:label="@string/title_activity_login">
+            android:label="@string/title_activity_login"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
